# web-test

./: .gitignore  .gitlab-ci.yml  LICENSE-MIT.md  README.md  diesel.toml
.github/workflows/: main.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  register.rs
backend/src/db/: mod.rs  schema.rs  tests.rs
backend/src/db/model/: user.rs
backend/src/db/user/: mod.rs  tests.rs
backend/src/frontend/: mod.rs
backend/src/notification/: email.rs
backend/tests/: backend.rs
backend/tests/api/: hello.rs
common/: Cargo.toml
common/src/: registration.rs
frontend/: Cargo.toml  index.html  package.json
frontend/src/: main.rs  router.rs
frontend/src/components/: email_registration.rs  hello.rs  home.rs  login.rs  mod.rs  nav.rs  register.rs
frontend/style/: main.scss
migrations/2021-11-14-161150_users/: down.sql  up.sql
migrations/2021-11-27-110538_registration_login/: down.sql  up.sql
