[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
repository = "https://gitlab.com/Razican/my_support"
description = """
Service Management application. Backend crate.
"""

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "backend_core"
path = "src/lib.rs"

[features]

[dependencies]
common = { path = "../common" }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
chrono = "0.4.19"
uuid = "0.8.2"
lettre = "0.10.0-rc.4"
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.5"
once_cell = "1.10.0"
rand = "0.8.5"
zxcvbn = "2.2.0"
sha3 = "0.10.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "uuidv07", "chrono"]
