[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
repository = "https://gitlab.com/Razican/my_support"
description = """
Service Management application. Frontend crate.
"""

[dependencies]
common = { path = "../common" }
anyhow = "1.0.52"
gloo-console = "0.2.1"
reqwasm = "0.4.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
web-sys = "0.3.55"
yew = "0.19.3"
yew-router = "0.16.0"
zxcvbn = "2.1.2"
