[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
repository = "https://gitlab.com/Razican/my_support"
description = """
Service Management application. Frontend crate.
"""

[dependencies]
common = { path = "../common" }
gloo-console = "0.2.1"
reqwasm = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3.56"
yew = "0.19.3"
yew-router = "0.16.0"
