[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
repository = "https://gitlab.com/Razican/my_support"
description = """
Service Management application. Frontend crate.
"""

[dependencies]
reqwasm = "0.5.0"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
yew = "0.19.3"
